docker/n8n/Kubernetes/service-n8n-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-main
spec:
  selector:
    app: n8n-main
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
